chore(ingress): add EnableLoadBalance field in warehouse.
